commented config calls for later development
