# datalake_api/swagger_server/swagger/swagger.yaml
@@ -3,8 +3,8 @@ info:
   title: DTaaS API
   description: "This API handles the communication between the virtual infrastructure\
     \ generated by the DTaaS codebase and the User. The goal is to allow to Upload,\
-    \ Updates, Donwload and Processing of data from a Dual S3/PFS Datalake thanks\
-    \ to interaction with a MongoDB. WARNING Asset is DECLARED but NEVER USED"
+    \ Update, Donwload and Process data from a Dual S3/PFS Datalake thanks\
+    \ to interaction with a MongoDB."
   version: 1.0.0
 servers:
 - url: http://localhost:8080/v1
@@ -136,6 +136,49 @@ paths:
         "400":
           description: Failed to delete file or its database entry
       x-openapi-router-controller: swagger_server.controllers.default_controller
+
+  /config:
+    get:
+      operationId: get_config
+      summary: Retrieve Configuration
+      responses:
+        '200':
+          description: Configuration retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/update_path_body'
+        '404':
+          description: Configuration not found
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+
+    put:
+      operationId: update_config
+      summary: Update Configuration
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+               new_config:
+                type: string
+                format: binary
+      responses:
+        '200':
+          description: Configuration updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+
+
+
 components:
   schemas:
     Asset:
